# biodivine-lib-param-bn

./: .coderabbit.yml  .gitignore  .releasenotes.yml  Cargo.toml  LICENSE  Makefile.toml  README.md  bench.sh  bench_run.py  docs-head.html  plot_scaling.py  scaling.sh  scaling_001.out.txt  scaling_050.out.txt  scaling_078.out.txt  scaling_113.out.txt  scaling_120.out.txt  scaling_122.out.txt  scaling_124.out.txt  scaling_144.out.txt  scaling_195.out.txt  scaling_all.sh
.cargo/: config-macos-dev.toml
.github/workflows/: build.yml  continuous-tests.yml  release.yml
aeon_models/: constants.aeon  g2a_instantiated.aeon  g2a_p9.aeon  hmox_pathway.aeon
benchmark-generated/: 20_015.aeon  20_026.aeon  20_067.aeon  20_091.aeon  21_097.aeon  22_035.aeon  22_055.aeon  23_036.aeon  23_037.aeon  23_088.aeon  23_106.aeon  24_021.aeon  24_089.aeon  25_003.aeon  25_049.aeon  26_104.aeon  27_086.aeon  28_061.aeon  28_090.aeon  28_099.aeon  28_107.aeon  28_119.aeon  29_022.aeon  29_024.aeon  29_028.aeon  31_005.aeon  31_069.aeon  31_074.aeon  31_102.aeon  32_068.aeon  33_030.aeon  33_094.aeon  34_040.aeon.trim  34_044.aeon.trim  34_101.aeon  34_134.aeon  35_034.aeon  35_038.aeon  35_136.aeon  36_033.aeon  (+51 more)
benchmarks/: 10_TCR_signalisation_reduced.aeon  18_buddingYeastIrons2009.aeon  23_T cell differentiation reorder.aeon  23_T cell differentiation.aeon  26_Wg_Pathway_11Jun2013.aeon  30_TCR.aeon  5_param_g2a.aeon  9_param_buddingYeastOrlando2008.aeon
booleannet_models/: booleannet.md
examples/: algo_base.rs  algo_base_fraction.rs  algo_base_saturation.rs  algo_base_saturation_fraction.rs  algo_decompose_saturation_parallel.rs  algo_lockstep.rs  algo_lockstep_async.rs  algo_lockstep_async_fraction.rs  algo_lockstep_async_parallel.rs  algo_lockstep_saturation.rs  algo_lockstep_saturation_parallel.rs  decomp.rs  make_benchmarks.rs  pscc.rs  reach_fun.rs  scc.rs
sbml_models/: apoptosis_stable.sbml  cell_collective_vut.sbml  g2a.sbml  g2a_with_ids.sbml  g2a_with_names.sbml  hmox1_pathway.sbml
sbml_models/real_world/[v101]__[r158]__[T-CELL-RECEPTOR-SIGNALING]__[cellcollective]/: model.aeon
sbml_models/real_world/[v102]__[r157]__[INTERFERON-1]__[covid-uni-lu]/: model.aeon
sbml_models/real_world/[v104]__[r166]__[ETC]__[covid-uni-lu]/: model.aeon
sbml_models/real_world/[v104]__[r226]__[EGFR-ERBB-SIGNALING]__[cellcollective]/: model.aeon
sbml_models/real_world/[v10]__[r14]__[AP-1-ELSE-0-WT]__[ginsim]/: model.aeon
sbml_models/real_world/[v10]__[r18]__[ROOT-STEM-CELL-NICHE]__[biomodels]/: model.aeon
sbml_models/real_world/[v10]__[r27]__[FISSION-YEAST-DAVIDICH-2008]__[ginsim]/: model.aeon
sbml_models/real_world/[v10]__[r34]__[BOOLEAN-CELL-CYCLE]__[ginsim]/: model.aeon
sbml_models/real_world/[v10]__[r35]__[MAMMALIAN-CELL-CYCLE]__[cellcollective]/: model.aeon
src/: _bnet_writer.rs  _impl_annotation.rs  _impl_binary_op.rs  _impl_boolean_network.rs  _impl_boolean_network_display.rs  _impl_boolean_network_from_bnet.rs  _impl_boolean_network_from_booleannet.rs  _impl_boolean_network_to_bnet.rs  _impl_boolean_network_to_booleannet.rs  _impl_display_for_boolean_network.rs  _impl_display_regulatory_graph.rs  _impl_eq_regulatory_graph.rs  _impl_extended_boolean.rs  _impl_fn_update.rs  _impl_parameter.rs  _impl_parameter_id.rs  _impl_regulation.rs  _impl_regulatory_graph.rs  _impl_space.rs  _impl_variable.rs  _impl_variable_id.rs  biodivine_std.rs  decomposition.rs  display_boolean_network.rs  display_regulatory_graph.rs  impl_boolean_network.rs  impl_fn_update.rs  impl_parameter.rs  impl_regulation.rs  impl_regulatory_graph.rs  impl_variable.rs  impl_variable_id.rs  lib.rs  util.rs
src/_aeon_parser/: _display_fn_update_temp.rs  _from_string_for_boolean_network.rs  _from_string_for_fn_update_temp.rs  _from_string_for_regulation_temp.rs  _impl_annotations.rs  _impl_boolean_network.rs  _impl_fn_update_temp.rs  _impl_regulatory_graph.rs  mod.rs
src/_bnet_parser/: mod.rs
src/_impl_annotations/: _impl_annotation.rs  _impl_reader.rs  _impl_writer.rs  mod.rs
src/_impl_regulatory_graph/: _impl_dot_export.rs  _impl_misc.rs  mod.rs
src/async_graph/: _impl_async_graph.rs  impl_async_graph.rs  impl_default_edge_params.rs  impl_evolution_operators.rs  impl_static_constraints.rs  mod.rs
src/bdd_params/: _impl_bdd_parameter_encoder.rs  _impl_static_constraints.rs  _impl_witness_generator.rs  impl_bdd_parameter_encoder.rs  impl_bdd_params.rs  impl_fn_update.rs  impl_function_table_entry.rs  impl_static_constraints.rs  impl_witness_generator.rs  mod.rs
src/biodivine_std/: mod.rs  structs.rs  traits.rs
src/fixed_points/: mod.rs  solver_iterator.rs  symbolic_iterator.rs
src/parser/: display_fn_update_temp.rs  from_string_boolean_network.rs  from_string_fn_update_temp.rs  from_string_regulation_temp.rs  impl_boolean_network.rs  impl_fn_update_temp.rs  impl_regulatory_graph.rs  mod.rs
src/pscc/: mod.rs
src/sbml/: export.rs  mod.rs
src/scc/: mod.rs
src/solver_context/: _impl_bn_solver.rs  _impl_bn_solver_context.rs  _impl_bn_solver_model.rs  _impl_raw_bn_model_iterator.rs  mod.rs
src/symbolic_async_graph/: _impl_fn_update_from_boolean_expression.rs  _impl_function_table.rs  _impl_graph_colored_vertices.rs  _impl_graph_colors.rs  _impl_graph_vertices.rs  _impl_regulation_constraint.rs  _impl_symbolic_async_graph.rs  _impl_symbolic_async_graph_algorithm.rs  _impl_symbolic_async_graph_operators.rs  _impl_symbolic_context.rs  _impl_symbolic_function_context.rs  bdd_set.rs  error.rs  mod.rs  projected_iteration.rs  reachability.rs
src/trap_spaces/: _impl_extended_boolean.rs  _impl_fn_update_partial_evaluation.rs  _impl_network_colored_spaces.rs  _impl_network_spaces.rs  _impl_optional_extended_boolean.rs  _impl_partial_space.rs  _impl_search_algorithm.rs  _impl_space.rs  _impl_symbolic_space_context.rs  _impl_trap_spaces.rs  dual_symbolic_encoding.rs  mod.rs  solver_iterator.rs
src/tutorial/: mod.rs  p01_regulatory_graph.rs  p02_boolean_network.rs  p03_symbolic_async_graph.rs  p04_graph_algorithm_sample.rs  p05_model_annotations.rs
(+129 files in other folders)
