[package]
name = "biodivine-lib-param-bn"
version = "0.5.3"
authors = ["Samuel Pastva <sam.pastva@gmail.com>", "Eva Šmijáková <xsmijak1@fi.muni.cz>", "Ondřej Huvar <xhuvar@fi.muni.cz>"]
edition = "2021"
description = "Library for working with parametrized Boolean networks."
homepage = "https://github.com/sybila/biodivine-lib-param-bn"
repository = "https://github.com/sybila/biodivine-lib-param-bn"
readme = "README.md"
keywords = ["boolean-network", "asynchronous", "symbolic", "graph", "systems-biology"]
categories = ["science", "simulation"]
license = "MIT"
rust-version = "1.60"

[lib]
name = "biodivine_lib_param_bn"
path = "src/lib.rs"

[[bin]]
name = "dump-graph"
path = "src/bin/dump_graph.rs"

[[bin]]
name = "bench-fixed-points-solver"
path = "src/bin/bench_fixed_points_solver.rs"
required-features = ["solver-z3"]

[[bin]]
name = "check-fixed-points-solver"
path = "src/bin/check_fixed_points_solver.rs"
required-features = ["solver-z3"]

# Enable rich docs for some online docs autogen services.
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "docs-head.html"]
features = [ "solver-z3" ]

[features]
print-progress = []
solver-z3 = ["dep:z3"]

[dependencies]
regex = "1.10.2"                # Regexes used for parsing of basic .aeon constructs.
lazy_static = "1.4.0"           # Used for initialization of commonly used regexes.
biodivine-lib-bdd = ">=0.5.6, <1.0.0"
num-bigint = "0.4.4"            # Used as infinite-precision representation in BDDs.
num-traits = "0.2.17"          # `BigInt::to_f64`
roxmltree = "0.19.0"            # Used for SBML parsing.
bitvector = "0.1.5"             # Represents Boolean states of complex networks.
z3 = { version = "0.12.1", optional = true }     # Used for fixed-point enumeration (and hopefully other things soon).

[dev-dependencies]
pretty_assertions = "1.4.0"