[package]
name = "biodivine-lib-param-bn"
version = "0.6.3"
authors = ["Samuel Pastva <sam.pastva@gmail.com>", "Eva Šmijáková <xsmijak1@fi.muni.cz>", "Ondřej Huvar <xhuvar@fi.muni.cz>"]
edition = "2024"
description = "Library for working with parametrized Boolean networks."
homepage = "https://github.com/sybila/biodivine-lib-param-bn"
repository = "https://github.com/sybila/biodivine-lib-param-bn"
readme = "README.md"
keywords = ["boolean-network", "asynchronous", "symbolic", "graph", "systems-biology"]
categories = ["science", "simulation"]
license = "MIT"
rust-version = "1.88"
# When releasing, only include the actual source code of the crate:
include = ["/src/**", "/Cargo.toml", "/README.md", "/LICENSE", "/docs-head.html"]

[lib]
name = "biodivine_lib_param_bn"
path = "src/lib.rs"

[[bin]]
name = "dump-graph"
path = "src/bin/dump_graph.rs"

[[bin]]
name = "bench-fixed-points-solver"
path = "src/bin/bench_fixed_points_solver.rs"
required-features = ["solver-z3"]

[[bin]]
name = "check-fixed-points-solver"
path = "src/bin/check_fixed_points_solver.rs"
required-features = ["solver-z3"]

# Enable rich docs for some online docs autogen services.
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "docs-head.html"]
features = [ "solver-z3" ]

[features]
print-progress = []
solver-z3 = ["dep:z3"]
serde = ["dep:serde", "biodivine-lib-bdd/serde"]

[dependencies]
cancel-this = "0.4"
fxhash = "0.2.1"
regex = "1.11"                # Regexes used for parsing of basic .aeon constructs.
lazy_static = "1.5"           # Used for initialization of commonly used regexes.
biodivine-lib-bdd = ">=0.6.1, <1.0.0"
num-bigint = "0.4"            # Used as infinite-precision representation in BDDs.
num-traits = "0.2"          # `BigInt::to_f64`
roxmltree = "0.20.0"            # Used for SBML parsing.
bitvector = "0.1.5"             # Represents Boolean states of complex networks.
z3 = { version = "0.18.2", optional = true }     # Used for fixed-point enumeration (and hopefully other things soon).
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4"
serde_json = "1.0"